# ia_2025

./: pyproject.toml  requirements.txt
notebooks/01 - Perceptró/: P1.ipynb
notebooks/02 - Scikit-learn i Perceptró/: P2.ipynb
notebooks/03 - Regressió i correlació/: Regressió.ipynb
notebooks/04 - Regressió Logística i K-Fold/: exercici.ipynb  regressio logística.ipynb
notebooks/05 - Neteja de dades i DT/: main.ipynb
src/aspirador/: __main__.py  agent.py  joc.py  joc_gui.py
src/cliffwalking/: __main__.py  agent.py
src/gridworld/: __main__.py  dynamic_programation.py  joc.py
src/monedes/: joc.py
src/monedes/solucio/: agent.py  estat.py
src/practica/: joc.py
src/runner/: cli.py
src/tictac/: __main__.py  agent.py  joc.py  victoria.py
src/tictac/solucio/: agent.py  agent_alfa_beta.py  agent_optim.py  estat.py
